--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-body{
+ body{
 	font: 'Raleway',sans-serif;
-	color: rgba(0,0,0,5);
+	color: rgba(0,0,0,.5);
 	text-align: center;
 	text-transform: uppercase;
 	letter-spacing:  .5em;
